fixed labels so they are visible on login page

--- a/admin/css/styles.css
+++ b/admin/css/styles.css
@@ -87,3 +87,8 @@ padding: 10px;
   
   }
   
+
+  /******* Login Page *******/
+  #login-id label {
+    color: #fff;
+  }
